--- a/index.html
+++ b/index.html
@@ -1,11 +1,50 @@
+<!DOCTYPE html>
 <html lang="en">
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-GLhlTQ8iRABdZLl6O3oVMWSktQOp6b7In1Zl3/Jr59b6EGGoI1aFkw7cmDA6j6gD" crossorigin="anonymous">
+    <link rel="stylesheet" href="style.css">
+    <title>Module 3 solution</title>
 </head>
 <body>
+    <!-- nav-->
+   <nav class="navbar navbar-expand-sm navbar-light bg-secondary" id="bod">
+        <div class="container-fluid">
+            <a href="index.html" class="navbar-brand">
+                <h1 class="font-weight-bold text-dark">Food,LLC</h1> 
+            </a>
+            <!-- toogle button for mobile -->
+            <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#toggle-button" aria-controls="toggle-button" aria-expanded="false" aria-label="Toggle navigation">
+                <span class="navbar-toggler-icon" ></span>
+            </button>
+            <!-- navbar links -->
+            <div class="collapse navbar-collapse" id="toggle-button">
+                <ul class="navbar-nav text-center d-block d-sm-none fw-medium">
+                    <li class="nav-item bg-body-tertiary my-1">
+                        <a class="nav-link" href="#">Chicken</a>
+                    </li>
+                    <li class="nav-item bg-body-tertiary my-1">
+                        <a class="nav-link" href="#">beef</a>
+                    </li>
+                    <li class="nav-item bg-body-tertiary my-1">
+                        <a class="nav-link" href="#">sushi</a>
+                    </li>
+                </ul>
+            </div>
+        </div>
+   </nav>
+
+   <!-- Body -->
+   <div class="container-fluid com">
+    <p class="bg-white text-center text-uppercase, fw-bold my-4 size">Our Menu</p>
+    <div class="bg-secondary px-3 ">
+        <p class="text-center fw-bold my-3">Chicken</p>
+        Lorem ipsum dolor sit amet consectetur adipisicing elit. Porro culpa perferendis quos odit vitae temporibus quis provident nisi, iusto omnis necessitatibus iure mollitia ipsa, beatae id nostrum explicabo quaerat, voluptas at repudiandae! Atque iure voluptate quasi incidunt laboriosam minima dicta odio, ipsa voluptates assumenda deserunt nemo exercitationem culpa inventore cupiditate suscipit quas officia quaerat reprehenderit! Dolor perspiciatis earum debitis mollitia deleniti ea laudantium? Expedita, fuga? Quod quos ducimus pariatur assumenda molestias quibusdam? Consequuntur repellendus est dolores cumque, nesciunt sint, doloremque commodi ad exercitationem nulla minima ut sit impedit delectus mollitia hic illo tempora. Quo, laboriosam. Iste repellendus libero vero provident illo optio ratione harum excepturi? Ad explicabo dolores necessitatibus ullam cumque tempora placeat enim sapiente, quibusdam, magnam aut id quos illum. Necessitatibus fugit asperiores ducimus, dolorem aspernatur quis totam debitis nostrum error quisquam id perferendis perspiciatis temporibus molestias facilis? Suscipit molestiae quibusdam itaque nostrum culpa qui, unde laudantium mollitia adipisci, accusantium recusandae quam commodi modi ut distinctio quae deserunt ipsum ullam repudiandae. Odio laudantium aliquam rerum sunt ea corporis voluptate soluta, autem in officia nobis nisi ut perspiciatis eos placeat nesciunt laboriosam enim facilis repellat necessitatibus. Corporis quia, possimus id minus reprehenderit iste totam, quasi eos non commodi neque incidunt. Lorem ipsum dolor sit amet consectetur, adipisicing elit. Exercitationem unde recusandae harum perspiciatis eum pariatur dolorum aliquid inventore, dolores est laborum facilis quo vero ipsa autem fugit consequuntur, animi molestiae sit assumenda qui iusto maxime. Magnam debitis iste modi eius tempore beatae aliquid quidem corporis! Aliquid illo in sunt corrupti ab itaque qui! Ut similique fugit laboriosam amet sint optio at quis neque nam, officia id laborum culpa iste repudiandae earum rerum cumque voluptates voluptatem? Accusamus eum deleniti obcaecati adipisci rerum sit natus debitis error, ipsum quam nostrum vero id! Perferendis quod placeat dolorem, necessitatibus voluptates nostrum quasi quibusdam ratione aliquid odit sunt, et ex dolorum, eos quas omnis sequi minima ipsa repellendus. Ad fugiat voluptates aut fugit. Nostrum, rem tenetur. Possimus atque eos ea suscipit praesentium officiis nulla voluptatum, laborum corporis veniam quod ut alias quae totam accusantium sit sint quidem, omnis soluta quas blanditiis? Qui, obcaecati! Minus autem laboriosam quis expedita amet vitae nisi neque, non minima velit nobis alias quas voluptatibus. Pariatur dolorum quas sapiente quibusdam qui quia molestiae ducimus, ad architecto dolore in debitis natus excepturi impedit. Harum architecto dignissimos vel voluptatibus minima voluptatum, sed velit culpa dolores ipsam magni consequuntur exercitationem a molestiae consectetur enim ex accusantium provident corrupti adipisci molestias natus necessitatibus accusamus commodi. Nostrum, laboriosam architecto! Delectus omnis dolores, soluta nihil atque blanditiis non eveniet ex odit quasi quia doloribus consequatur voluptatum officia ipsa distinctio necessitatibus nam ducimus aperiam at obcaecati, fugiat molestias! Atque expedita facere, quia hic iste dolorum, sint esse saepe sit id voluptas. Voluptatum quas similique labore? Facere enim molestiae modi voluptate architecto. Quam numquam dolore dignissimos aut fuga eius ut, rem esse beatae qui praesentium quos voluptate dolores id, a explicabo nostrum laboriosam repellat deserunt natus sequi. Rem est architecto enim minus, et reiciendis aperiam distinctio aspernatur voluptates beatae.
+    </div>
+   </div>
     
+   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/js/bootstrap.bundle.min.js" integrity="sha384-w76AqPfDkMBDXo30jS1Sgez6pr3x5MlQ1ZAGC+nuZB+EYdgRZgiwxhTBTkF7CXvN" crossorigin="anonymous"></script>
 </body>
 </html>
